# CryoSim

./: CMakeLists.txt  README  README.md
Utilities/: Plots.c  plot.cxx
data/: inputcryostat.txt  thermosiphon105cm.txt  thermosiphon10cm.txt  thermosiphon20cm.txt  thermosiphon30cm.txt
data/helium/: data_tube10_m.txt  data_tube10_x.txt  data_tube10_z.txt  input10.txt  input14.txt
data/hydrogen/: input10.txt  thermosiphon10cm.txt
include/: cryostat.h
lib/: libCryoSimLib.dylib
sources/: CMakeCache.txt  CMakeLists.txt  CryoSim.cxx  Makefile  build.ninja  cmake_install.cmake  cryostat.cxx  cryostat.h
sources/.old/: YDcommon.h  YDfunctions.h  YDmain.c  cryostat.cxx  cryostat.h
